--- a/notebooks/bootstrap.ipynb
+++ b/notebooks/bootstrap.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7d582dd2",
    "metadata": {},
    "source": [
     "# Выборочная статистика. Доверительные интервалы.\n",
@@ -12,7 +11,6 @@
   {
    "cell_type": "code",
    "execution_count": 482,
-   "id": "701c3040",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 483,
-   "id": "e6a93ef4",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": 484,
-   "id": "c302c901",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +71,6 @@
   {
    "cell_type": "code",
    "execution_count": 485,
-   "id": "285c794c",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +92,6 @@
   {
    "cell_type": "code",
    "execution_count": 486,
-   "id": "9c012569",
    "metadata": {
     "scrolled": true
    },
@@ -132,7 +126,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28c44a31",
    "metadata": {},
    "source": [
     "**Выборка** - это подмножество данных из **генеральной совокупности** (или популяции).\n",
@@ -149,7 +142,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f24838",
    "metadata": {},
    "source": [
     "Один из простых и эффективных способов оценки выборочного распределения статистики состоит в том, чтобы вынимать дополнительные выборки с возвратом из самой выборки и повторно вычислять статистику для каждой повторной выборки. Данная процедура называется бутстрапом (от англ. **bootstrap** )"
@@ -157,7 +149,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7add69fe",
    "metadata": {},
    "source": [
     "**Алгоритм бутстрапа для среднего значения для выборки размером n:**\n",
@@ -174,7 +165,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07220565",
    "metadata": {},
    "source": [
     "### Выборочное распределение средних"
@@ -183,7 +173,6 @@
   {
    "cell_type": "code",
    "execution_count": 487,
-   "id": "7e42e872",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +220,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb4e645f",
    "metadata": {},
    "source": [
     "### Стандартная ошибка среднего\n",
@@ -244,7 +232,6 @@
   {
    "cell_type": "code",
    "execution_count": 488,
-   "id": "a5de278b",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +253,6 @@
   {
    "cell_type": "code",
    "execution_count": 489,
-   "id": "a0b701f3",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +274,6 @@
   {
    "cell_type": "code",
    "execution_count": 490,
-   "id": "a0e633e6",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": 491,
-   "id": "56f0f072",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +316,6 @@
   {
    "cell_type": "code",
    "execution_count": 492,
-   "id": "2e38d195",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +336,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "746fcdde",
    "metadata": {},
    "source": [
     "#### Проверка теоретической формулы для ошибки среднего методом бутстрапа"
@@ -362,7 +344,6 @@
   {
    "cell_type": "code",
    "execution_count": 493,
-   "id": "5af8da12",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +367,6 @@
   {
    "cell_type": "code",
    "execution_count": 494,
-   "id": "b42743e7",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +393,6 @@
   {
    "cell_type": "code",
    "execution_count": 495,
-   "id": "7defe2d0",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +414,6 @@
   {
    "cell_type": "code",
    "execution_count": 496,
-   "id": "6ef20ab1",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +437,6 @@
   {
    "cell_type": "code",
    "execution_count": 497,
-   "id": "606b051c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +450,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "1af32249",
    "metadata": {},
    "source": [
     "### Доверительные интервалы\n",
@@ -490,7 +466,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "700a0a27",
    "metadata": {},
    "source": [
     "ДИ - это интервал, который покрывает оцениваемый параметр с заданной вероятностью. \\\n",
@@ -518,7 +493,6 @@
   {
    "cell_type": "code",
    "execution_count": 498,
-   "id": "3aed2321",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +522,6 @@
   {
    "cell_type": "code",
    "execution_count": 499,
-   "id": "ee3dd9fb",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +545,6 @@
   {
    "cell_type": "code",
    "execution_count": 515,
-   "id": "b0e8ebd0",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +583,6 @@
   {
    "cell_type": "code",
    "execution_count": 517,
-   "id": "5e221024",
    "metadata": {
     "scrolled": true
    },
@@ -651,7 +622,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5f04d1b",
    "metadata": {},
    "source": [
     "#### Варианты функций для подсчета ДИ"
@@ -660,7 +630,6 @@
   {
    "cell_type": "code",
    "execution_count": 502,
-   "id": "14c5f091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +644,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c3306c5",
    "metadata": {},
    "source": [
     "### Обратная задача: Сколько пользователей нужно включить в тест,  чтобы обеспечить 95% точность?\n",
@@ -690,7 +658,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -704,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
