--- a/notebooks/bootstrap.ipynb
+++ b/notebooks/bootstrap.ipynb
@@ -654,6 +654,15 @@
     "\n",
     "$$n = \\bigg(\\frac{z_{1-\\alpha/2}*sd}{\\Delta}\\bigg)^2$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test"
+   ]
   }
  ],
  "metadata": {
