--- a/notebooks/function_optimization.ipynb
+++ b/notebooks/function_optimization.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7a1098bf",
    "metadata": {},
    "source": [
     "# Оптимизация\n",
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a3c82b6",
    "metadata": {},
    "source": [
     "## Типы оптимизаций"
@@ -20,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03db35ec",
    "metadata": {},
    "source": [
     "### Безусловная vs условная\n",
@@ -33,6 +36,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bba3e28e",
    "metadata": {},
    "source": [
     "### Локальная vs глобальная\n",
@@ -42,6 +46,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7edce51",
    "metadata": {},
    "source": [
     "### Однокритериальная и многокритериальная оптимизация\n",
@@ -51,6 +56,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ead9a9d",
    "metadata": {},
    "source": [
     "## Характеристики методов\n",
@@ -62,6 +68,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9146fb6",
    "metadata": {},
    "source": [
     "## Классиификация методов оптимизации\n",
@@ -73,38 +80,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ed35838f",
    "metadata": {},
    "source": [
     "## Метод Нелдера-Мида\n",
     "Или метод деформируемого многогранника\\\n",
     "Прямой детерминированный метод локальной оптимизации\n",
     "\n",
-    "https://habr.com/ru/post/332092/"
+    "Алгоритм заключается в формировании симплекса (simplex) и последующего его деформирования в направлении минимума, посредством трех операций:\n",
+    "* Отражение (reflection);\n",
+    "* Растяжение (expansion);\n",
+    "* Сжатие (contract);\n",
+    "Симплекс представляет из себя геометрическую фигуру, являющуюся n — мерным обобщением треугольника. Для одномерного пространства — это отрезок, для двумерного — треугольник. Таким образом n — мерный симплекс имеет n + 1 вершину.\n",
+    "\n",
+    "1. Задаем начальные точки и строим симплекс.\n",
+    "2. Сортируем значения функции в вершинах: f (x1) ≤ f (x2) ≤ ... ≤ f (xn+1).\n",
+    "3. Уменьшить значение функции за один шаг в самой плохой точке.\n",
+    "4. Деформируем симплекс так, чтобы он \"подползал\" к минимуму функции.\n",
+    "\n",
+    "Алгоритм заканчивается, когда:\n",
+    "\n",
+    "* Было выполнено необходимое количество итераций.\n",
+    "* Площадь симплекса достигла определенной величины.\n",
+    "* Текущее лучшее решение достигло необходимой точности."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "b468f6be",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "bc8c5694",
    "metadata": {},
    "source": [
     "##  Методы линейного поиска\n",
@@ -131,6 +142,7 @@
     }
    },
    "cell_type": "markdown",
+   "id": "521e0567",
    "metadata": {},
    "source": [
     "### Метод градиентного спуска\n",
@@ -156,6 +168,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d613ecda",
    "metadata": {},
    "source": [
     "#### Модификации градиентного спуска\n",
@@ -171,26 +184,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "f8782a2f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "72666b07",
    "metadata": {},
    "source": [
     "### Метод Ньютона"
@@ -199,12 +200,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "023a04ed",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "b3118365",
    "metadata": {},
    "source": [
     "### Методы квази-Ньютона\n",
@@ -215,12 +218,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "951e26cc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "246a54a7",
    "metadata": {},
    "source": [
     "## Стохастические методы\n",
@@ -241,6 +246,7 @@
     }
    },
    "cell_type": "markdown",
+   "id": "4ef1d95c",
    "metadata": {},
    "source": [
     "### Случайный поиск по сфере\n",
@@ -256,46 +262,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "10738bf8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "a549f5e5",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Эвристические методы\n",
+    "\n",
+    "Эвристические методы — последовательность  ",
+    "процедур обработки информации, выполняемая для поиска более рациональных и новых конструктивных решений.\n",
+    "\n",
+    "Методы содержат свободные параметры, значения  ",
+    "которых могут оказывать существенное влияние на эффективность"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55060189",
+   "metadata": {},
+   "source": [
+    "Их дофига, вот примеры:\n",
+    "\n",
+    "* Методы, имитирующие физические процессы\n",
+    " - Имитация отжига\n",
+    "\n",
+    "\n",
+    "* Эволюционные методы\n",
+    " - Генетический алгоритм \n",
+    "\n",
+    "\n",
+    "* Методы “роевого” интеллекта\n",
+    " - Дифференциальная эволюция (scipy.optimize.differential_evolution)\n",
+    " - Метод роя частиц\n",
+    "\n",
+    "\n",
+    "* Методы, имитирующие поведение человека\n",
+    " - Алгоритм эволюции "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8a78f7d6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -303,6 +316,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eabc75f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db179195",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aa2508a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -310,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -324,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
