--- a/notebooks/quality_metrics.ipynb
+++ b/notebooks/quality_metrics.ipynb
@@ -122,6 +122,47 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Метрики качества в задачах регресии"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MAE (средняя абсолютная ошибка)\n",
+    "\n",
+    "$$MAE = \\frac{1}{n}\\sum_{i=1}^{n} |y_i - \\hat{y}_i|$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MAPE (средняя абсолютная ошибка в процентах)\n",
+    "\n",
+    "$$MAPE = \\frac{1}{n}\\sum_{i=1}^{n} \\frac{|y_i - \\hat{y}_i|}{|y_i|} * 100$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
