--- a/notebooks/quality_metrics.ipynb
+++ b/notebooks/quality_metrics.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Матрица ошибок (confusion matrix)\n",
+    "### Матрица ошибок (confusion matrix)\n",
     "\n",
     "При классификации модель может допускать ошибки, присваивая наблюдению неверный класс. Существуют различные метрики оценки качества предсказаний, которые базируются на 4-ёх параметрах - true positive, false positive, false negative и true negative, соответствующих тому какой класс был присвоен наблюдениям каждого из классов. Матрицу этих параметров называют **confusion matrix**.\\\n",
     "В sklearn можно её удобно получить с помощью функции confusion_matrix.\\\n",
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Accuracy (доля правильных ответов алгоритма)\n",
+    "### Accuracy (доля правильных ответов алгоритма)\n",
     "Отношение правильно классифицированных наблюдений ко всем.\n",
     "\n",
     "$$accuracy = \\frac{TP + TN}{TP + TN + FP + FN}$$\n",
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Precision (точность) и Recall (полнота)\n",
+    "### Precision (точность) и Recall (полнота)\n",
     "\n",
     "**Precision** можно интерпретировать как долю объектов, названных классификатором положительными и при этом действительно являющимися положительными:\n",
     "$$Precision = \\frac{TP}{TP+FP}$$\n",
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## F-мера (F1_score)\n",
+    "### F-мера (F1_score)\n",
     "Это комбинированная мера Precision и Recall:\n",
     "$$F мера = \\frac{2*Precision*Recall}{Precision + Recall}$$\n",
     "\n",
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AUC-ROC и AUC-PR"
+    "### AUC-ROC и AUC-PR"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MAE (средняя абсолютная ошибка)\n",
+    "### MAE (средняя абсолютная ошибка)\n",
     "\n",
     "$$MAE = \\frac{1}{n}\\sum_{i=1}^{n} |y_i - \\hat{y}_i|$$\n",
     "\n"
@@ -151,10 +151,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MAPE (средняя абсолютная ошибка в процентах)\n",
+    "### MAPE (средняя абсолютная ошибка в процентах)\n",
     "\n",
     "$$MAPE = \\frac{1}{n}\\sum_{i=1}^{n} \\frac{|y_i - \\hat{y}_i|}{|y_i|} * 100$$\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $R^2$ Коэффициент детерминации"
    ]
   },
   {
@@ -167,7 +174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -181,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
